--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@ include ./theme.conf
 #: characters.
 
 # BEGIN_KITTY_FONTS
-font_family      family="Hack Nerd Font Mono"
+font_family      family="JetBrains Mono"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -27,9 +27,11 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 11.0
+font_size 12
 
 #: Font size (in pts)
+
+
 
 # force_ltr no
 
@@ -170,8 +172,8 @@ font_size 11.0
 #: font glyph is rendered and the baseline at which the glyph is
 #: placed in the cell. For example::
 
-#:     modify_font cell_width 80%
-modify_font cell_height +12px
+#:     modify_font cell_width 100%
+       modify_font cell_height +8px
 #:     modify_font baseline 3
 
 #: Note that modifying the baseline will automatically adjust the
@@ -191,7 +193,7 @@ modify_font cell_height +12px
 
 #: Cursor customization {{{
 
-# cursor #cccccc
+# cursor #e1e3e4
 
 #: Default cursor color. If set to the special value none the cursor
 #: will be rendered with a "reverse video" effect. It's color will be
@@ -237,6 +239,9 @@ cursor_blink_interval 0
 
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity. Set to zero to never stop blinking.
+
+# cursor_trail 1
+
 
 #: }}}
 
@@ -996,7 +1001,8 @@ enable_audio_bell no
 
 #: The foreground and background colors.
 
-# background_opacity 1.0
+background_opacity 1.0
+# background_blur 30
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1416,7 +1422,7 @@ term xterm-kitty
 #: to use the background color of the currently active window and
 #: finally you can use an arbitrary color, such as #12af59 or red.
 
-macos_titlebar_color #33353f
+macos_titlebar_color #2a2f38
 
 #: The color of the kitty window's titlebar on macOS. A value of
 #: system means to use the default system color, light or dark can
@@ -1464,6 +1470,7 @@ macos_quit_when_last_window_closed yes
 #: will only affect newly created OS windows.
 
 # macos_thicken_font 0.5
+# text_composition_strategy 1.0 0
 
 #: Draw an extra border around the font with the given width, to
 #: increase legibility at small font sizes on macOS. For example, a
@@ -1500,7 +1507,7 @@ macos_quit_when_last_window_closed yes
 #: mouse cursor invisible on dual GPU machines. Changing this option
 #: by reloading the config is not supported.
 
-# macos_colorspace srgb
+macos_colorspace srgb
 
 #: The colorspace in which to interpret terminal colors. The default
 #: of srgb will cause colors to match those seen in web browsers. The
