--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,49 +1,49 @@
-# https://github.com/sainnhe/sonokai
+# https://github.com/selenebun/sonokai-kitty/blob/main/colors/sonokai-atlantis.conf
 
-background #2c2e34
-foreground #e2e2e3
+background #2a2f38
+foreground #e1e3e4
 
-selection_background #3b3e48
-selection_foreground #e2e2e3
+selection_background #3d4455
+selection_foreground #e1e3e4
 
-cursor #e2e2e3
+cursor #e1e3e4
 cursor_text_color background
 
-active_tab_background #2c2e34
-active_tab_foreground #e2e2e3
+active_tab_background #2a2f38
+active_tab_foreground #e1e3e4
 active_tab_font_style bold
-inactive_tab_background #2c2e34
-inactive_tab_foreground #e2e2e3
+inactive_tab_background #2a2f38
+inactive_tab_foreground #e1e3e4
 inactive_tab_font_style normal
 
 # Black
-color0 #181819
-color8 #7f8490
+color0 #181a1c
+color8 #828a9a
 
 # Red
-color1 #fc5d7c
-color9 #fc5d7c
+color1 #ff6578
+color9 #ff6578
 
 # Green
-color2 #9ed072
-color10 #9ed072
+color2 #9dd274
+color10 #9dd274
 
 # Yellow
-color3 #e7c664
-color11 #e7c664
+color3 #eacb64
+color11 #eacb64
 
 # Blue
-color4 #76cce0
-color12 #76cce0
+color4 #72cce8
+color12 #72cce8
 
 # Magenta
-color5 #b39df3
-color13 #b39df3
+color5 #ba9cf3
+color13 #ba9cf3
 
 # Cyan
-color6 #f39660
-color7 #f39660
+color6 #f69c5e
+color7 #f69c5e
 
 # White
-color7 #e2e2e3
-color15 #e2e2e3
+color7 #e1e3e4
+color15 #e1e3e4
